product example on sets

--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -287,11 +287,10 @@ There are different options for $\pi'_1$ and $\pi'_2$. Lets choose the
 We can only one morphism $h$ that satisfied conditions
 \eqref{eq:product}:
 \[
-h: (a_1,a_2,b_1, b_2) \to (a_1, b_2) \in A \times B.
+h: (a_1,a_2,b_1, b_2) \to (a_1, b_2) \in A \times B
 \]
-
-
- There is not a product TBD
+that is accordingly with the \mynameref{def:product} definition for $C = A
+\times B$.
 \end{example}
 
 The \mynameref{def:product} of objects will provide also a definition
