--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -291,6 +291,14 @@ h: (a_1,a_2,b_1, b_2) \to (a_1, b_2) \in A \times B
 \]
 that is accordingly with the \mynameref{def:product} definition for $C = A
 \times B$.
+
+From other side there are a lot of $h': C \to C'$:
+\[
+h' : (a,b) \to (a, \bar{a}, \bar{b}, b),
+\] 
+where $\bar{a}$ can be replaced with any element from $A$ and
+$\bar{b}$ can be replaced with any element of $B$. Therefore $C'$ can
+not be considered as the \mynameref{def:product} of $A$ and $B$.
 \end{example}
 
 The \mynameref{def:product} of objects will provide also a definition
