--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -284,7 +284,7 @@ There are different options for $\pi'_1$ and $\pi'_2$. Lets choose the
 \pi'_2 : (a_1,a_2,b_1, b_2) \to b_2 \in B.
 \nonumber
 \end{eqnarray}
-We can only one morphism $h$ that satisfied conditions
+We have only one morphism $h$ that satisfied conditions
 \eqref{eq:product}:
 \[
 h: (a_1,a_2,b_1, b_2) \to (a_1, b_2) \in A \times B
@@ -292,7 +292,7 @@ h: (a_1,a_2,b_1, b_2) \to (a_1, b_2) \in A \times B
 that is accordingly with the \mynameref{def:product} definition for $C = A
 \times B$.
 
-From other side there are a lot of $h': C \to C'$:
+From other side there are a lot of morphisms $h'$ which factorize $\pi_{1,2}$:
 \[
 h' : (a,b) \to (a, \bar{a}, \bar{b}, b),
 \] 
