product example on sets

--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -292,7 +292,17 @@ h: (a_1,a_2,b_1, b_2) \to (a_1, b_2) \in A \times B
 that is accordingly with the \mynameref{def:product} definition for $C = A
 \times B$.
 
-From other side there are a lot of morphisms $h'$ which factorize $\pi_{1,2}$:
+If $C'$ had been the \mynameref{def:product} then it would have
+satisfied the following factorization conditions:
+\begin{eqnarray}
+\pi_1 = \pi'_1 \circ h', 
+\nonumber \\
+\pi_2 = \pi'_2 \circ h',
+\label{eq:productex}
+\end{eqnarray}
+where $h'$ would have been an unique morphism.
+From other side there are a lot of morphisms $h'$ which factorize
+$\pi_{1,2}$ accordingly \eqref{eq:productex}:
 \[
 h' : (a,b) \to (a, \bar{a}, \bar{b}, b),
 \] 
