coproduct example on sets

--- a/cattheory.bib
+++ b/cattheory.bib
@@ -1,4 +1,12 @@
 %% -*- coding:utf-8 -*-
+@misc{ wiki:coproduct,
+    author = "{Wikipedia contributors}",
+    title = "Coproduct --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2019",
+    url = "https://en.wikipedia.org/w/index.php?title=Coproduct&oldid=893649821",
+    note = "[Online; accessed 5-May-2019]"
+  }
+
 @misc{bib:scalable_program_arch,    
     title = {Scalable program architectures},
     author = {Gabriel Gonzalez},
