--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -404,6 +404,9 @@ commutes, i.e. $i'_1 = h \circ i_1, i'_2 = h \circ i_2$.
   \label{fig:sum}
 \end{figure}
 In other words $h$ factorizes $i'_{1,2}$.
+
+The categorical sum is also called as \textit{coproduct}.
+\index{coproduct}
 \end{definition}
 
 \begin{definition}[Disjoint union]
@@ -428,6 +431,13 @@ In other words $h$ factorizes $i'_{1,2}$.
   \mynameref{def:setcategory}.  
 \end{example}
 
+\begin{remark}[Sum sign]
+In the book we will use $\oplus$ as the sign for the categorical
+\mynameref{def:sum}. The \mynameref{def:disjoint_union} sign $\sqcup$
+is also used
+\footnote{but not in the book} as the sign for categorical sum
+\cite{wiki:coproduct}. 
+\end{remark}
 
 \section{Category as a monoid}
 \label{sec:category_as_monoid}
