--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -456,6 +456,17 @@ Consider the following definition from abstract algebra
   \end{enumerate}
 \end{definition}
 
+\begin{remark}[Monoid]
+The importance of monoid is in the 3 properties.
+  \begin{enumerate}
+  \item Closure: The property says that the result of the binary
+    operation will produce the element from the same collection. I.e.
+    we always stay in the same collection.
+  \item Associativity: TBD
+  \item Identity element: TBD
+  \end{enumerate}
+\end{remark}
+
 We can consider 2 \mynameref{def:monoid}s. The first one has
 \mynameref{def:product} as the binary operation and
 \mynameref{def:terminal_object} as the identity element. As result we
@@ -479,7 +490,7 @@ it has finite
 \mynameref{def:product}s and \mynameref{def:sum}s such that 
 $\forall a,b,c \in \catob{C}$:
 \[
-a \times b \oplus a \times c \cong a \times ( b \oplus c )
+(a \times b) \oplus (a \times c) \cong a \times ( b \oplus c )
 \]
 and 
 \[
