--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -456,6 +456,12 @@ Consider the following definition from abstract algebra
   \end{enumerate}
 \end{definition}
 
+\mynameref{def:monoid} concept is widely spread in math. Especially
+integer numbers form a monoid under summation operation. They also
+form another monoid under multiplication operation. The element
+\textbf{0} is used as identity in summation and \textbf{1} is used as
+the identity in multiplication. 
+
 \begin{remark}[Monoid]
 The importance of monoid is in the 3 properties.
   \begin{enumerate}
