--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -468,7 +468,9 @@ The importance of monoid is in the 3 properties.
   \item Closure: The property says that the result of the binary
     operation will produce the element from the same collection. I.e.
     we always stay in the same collection.
-  \item Associativity: TBD
+  \item Associativity: the property says that we can combine the
+    elements in any order, same as morphisms in the
+    \mynameref{def:category} definition.
   \item Identity element: TBD
   \end{enumerate}
 \end{remark}
