--- a/cattheory.bib
+++ b/cattheory.bib
@@ -1,4 +1,12 @@
 %% -*- coding:utf-8 -*-
+@misc{ quora:monoidimportance,
+    author = "{Lex Sheehan}",
+    title = "What’s the significance of monoids?",
+    year = "2017",
+    url = "https://qr.ae/TWNHIi"
+  }
+
+
 @misc{ wiki:coproduct,
     author = "{Wikipedia contributors}",
     title = "Coproduct --- {Wikipedia}{,} The Free Encyclopedia",
