--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -456,23 +456,25 @@ Consider the following definition from abstract algebra
   \end{enumerate}
 \end{definition}
 
+\begin{example}[Monoid]
 \mynameref{def:monoid} concept is widely spread in math. Especially
 integer numbers form a monoid under summation operation. They also
 form another monoid under multiplication operation. The element
 \textbf{0} is used as identity in summation and \textbf{1} is used as
 the identity in multiplication. 
+\end{example}
 
-\begin{remark}[Monoid]
-The importance of monoid is in the 3 properties.
-  \begin{enumerate}
-  \item Closure: The property says that the result of the binary
-    operation will produce the element from the same collection. I.e.
-    we always stay in the same collection.
-  \item Associativity: the property says that we can combine the
-    elements in any order, same as morphisms in the
-    \mynameref{def:category} definition.
-  \item Identity element: TBD
-  \end{enumerate}
+\begin{remark}[Monoid importance]
+\index{Monoid!importance}
+The 3 properties of monoid are important if we want to combine a set
+of items into single one. I.e. the rules allow to write a reduction
+function or in other words it allows to simplify calculations in math.
+
+The monoids are also used to solve large computations because they
+allow to break a computation into pieces. As result we can run small
+computations in separate cores or on separate servers and combine the
+results into the single one using monoid rules
+\cite{quora:monoidimportance}. 
 \end{remark}
 
 We can consider 2 \mynameref{def:monoid}s. The first one has
