--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -467,7 +467,7 @@ the identity in multiplication.
 \begin{remark}[Monoid importance]
 \index{Monoid!importance}
 The 3 properties of monoid are important if we want to combine a set
-of items into single one. I.e. the rules allow to write a reduction
+of items into the single one. I.e. the rules allow to write a reduction
 function or in other words it allows to simplify calculations in math.
 
 The monoids are also used to solve large computations because they
