--- a/cattheory.tex
+++ b/cattheory.tex
@@ -16,6 +16,8 @@
 \usepackage{physics}
 \usepackage{adjustbox}
 \usepackage{nomencl}
+\usepackage{mathtools}
+%\usepackage{thmbox} % Overrides \newtheorem command! See [nothm] to disable this feature.
 \makenomenclature
 
 % http://tex.stackexchange.com/questions/42343/how-to-add-a-navigation-window-to-a-latex-generated-pdf-document
