--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -464,16 +464,15 @@ form another monoid under multiplication operation. The element
 the identity in multiplication. 
 \end{example}
 
-\begin{remark}[Monoid importance]
-\index{Monoid!importance}
-The 3 properties of monoid are important if we want to combine a set
-of items into the single one. I.e. the rules allow to write a reduction
-function or in other words it allows to simplify calculations in math.
-The monoids are also used to solve large computations because they
-allow to break a computation into pieces. As result we can run small
-computations in separate cores or on separate servers and combine the
-results into the single one using monoid rules
-\cite{quora:monoidimportance}. 
+\begin{remark}[Monoid]
+The given definition of monoid is based on its internal structure i.
+e. a non \mynameref{def:categorical_approach} was used there. In
+\cref{ch:monoid_categorically}  we will continue the 
+\mynameref{def:monoid} concept investigation and will give a
+\mynameref{def:categorical_approach} to the concept. You can also find
+some notes about the concept importance in different areas
+such as programming languages and math (see
+\cref{ch:monoid_importance_monad}).
 \end{remark}
 
 We can consider 2 \mynameref{def:monoid}s. The first one has
