--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -625,6 +625,15 @@ the book. This description is an alternative one to an ordinary system
 description via its internal structure.
 \end{definition}
 
+\begin{definition}[Non-categorical approach]
+\label{def:non_categorical_approach}
+The opposite to \mynameref{def:categorical_approach} will be called as
+ \textit{non-categorical approach} in
+the book. This description is an ordinary system
+description via its internal structure.
+\end{definition}
+
+
 \begin{definition}[Singleton]
 \label{def:singleton_set} 
 The \textit{singleton} is a \mynameref{def:set} with only one element.
