--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -466,10 +466,11 @@ the identity in multiplication.
 
 \begin{remark}[Monoid]
 The given definition of monoid is based on its internal structure i.
-e. a non \mynameref{def:categorical_approach} was used there. In
+e. there is a \mynameref{def:non_categorical_approach}. In
 \cref{ch:monoid_categorically}  we will continue the 
 \mynameref{def:monoid} concept investigation and will give a
-\mynameref{def:categorical_approach} to the concept. You can also find
+\mynameref{def:categorical_approach} of the concept. You can also find
+there 
 some notes about the concept importance in different areas
 such as programming languages and math (see
 \cref{ch:monoid_importance_monad}).
