categorical approach stub

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -602,38 +602,6 @@ allow connect our usual knowledge about sets with the category theory.
   \index{Category!large}
 \end{remark}
 
-\begin{remark}[Set vs Category]
-  \label{rem:set_vs_category}
-  There is an interesting relation between sets and categories. In both
-  we consider objects(sets) and relations between
-  them(morphisms/functions). 
-
-  In the set theory we can get info about functions by looking inside
-  the objects(sets) aka use ``microscope'' \cite{bib:milewski2018category} 
-
-  Contrary in the category theory we initially don't have any info about object
-  internal structure but can get it using the relation between the
-  objects i.e. using \mynameref{def:morphism}s. In other words we can use
-  ``telescope'' \cite{bib:milewski2018category}  there.
-\end{remark}
-
-\begin{definition}[Categorical approach]
-\label{def:categorical_approach}
-The description of a system (object) via its relations with other
-systems (objects) will be called as  \textit{categorical approach} in
-the book. This description is an alternative one to an ordinary system
-description via its internal structure.
-\end{definition}
-
-\begin{definition}[Non-categorical approach]
-\label{def:non_categorical_approach}
-The opposite to \mynameref{def:categorical_approach} will be called as
- \textit{non-categorical approach} in
-the book. This description is an ordinary system
-description via its internal structure.
-\end{definition}
-
-
 \begin{definition}[Singleton]
 \label{def:singleton_set} 
 The \textit{singleton} is a \mynameref{def:set} with only one element.
@@ -1442,3 +1410,55 @@ direct sum.
   \label{fig:example_quantum}
 \end{figure}
 \end{example}
+
+\section{Categorical approach}
+
+\begin{remark}[Set vs Category]
+  \label{rem:set_vs_category}
+  There is an interesting relation between sets and categories. In both
+  we consider objects(sets) and relations between
+  them(morphisms/functions). 
+
+  In the set theory we can get info about functions by looking inside
+  the objects(sets) aka use ``microscope'' \cite{bib:milewski2018category} 
+
+  Contrary in the category theory we initially don't have any info about object
+  internal structure but can get it using the relation between the
+  objects i.e. using \mynameref{def:morphism}s. In other words we can use
+  ``telescope'' \cite{bib:milewski2018category}  there.
+\end{remark}
+
+
+\begin{definition}[Categorical approach]
+\label{def:categorical_approach}
+The description of a system (object) via its relations with other
+systems (objects) will be called as  \textit{categorical approach} in
+the book. This description is an alternative one to an ordinary system
+description via its internal structure.
+\end{definition}
+
+\begin{definition}[Non-categorical approach]
+\label{def:non_categorical_approach}
+The opposite to \mynameref{def:categorical_approach} will be called as
+ \textit{non-categorical approach} in
+the book. This description is an ordinary system
+description via its internal structure.
+\end{definition}
+
+
+\subsection{Programming languages}
+
+TBD imperative vs declarative
+
+\subsection{Physics}
+
+TBD Optics law
+
+\subsubsection{Mechanics}
+
+TBD Newton mechanics vs least action principle
+
+
+\subsection{Quantum mechanics}
+
+TBD Path integral
