--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -10,8 +10,7 @@ answer is possible if an \mynameref{def:object} is a
 if they contain the equivalent collection of elements. Unfortunately
 we cannot do the same trick for categorical \mynameref{def:object}s as
 soon as they don't have any internal 
-structure but can use a \mynameref{def:categorical_approach} (see 
-\mynameref{rem:set_vs_category}) i.e. if we cannot use a ``microscope'' lets
+structure but can use a \mynameref{def:categorical_approach} (see \cref{ch:categorical_approach}) i.e. if we cannot use a ``microscope'' lets
 use a ``telescope'' and define the equality of objects and morphisms of
 a category $\cat{C}$ in the terms of whole $\cathom{C}$.
 
