--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1482,7 +1482,7 @@ The motion equation can be written in the following form:
 \frac{\partial L}{\partial \dot{q}_i} \right)
 = \frac{\partial L}{\partial q_i}
 \end{equation}
-\begin{example}[Newton's second law for single particle]
+\begin{example}[Newton's second law for a particle]
 Lets consider a single particle motion on the force field $F = -
 \frac{d U}{d x}$.
 The kinetic energy is
@@ -1501,11 +1501,14 @@ Thus \eqref{eq:lagrange_mechanics} gives us
 \]
 or
 \[
-\frac{d}{dt}\left(m \dot{x}\right) = m \ddot{x} 
+\frac{d}{dt}\left(m \dot{x}\right) = m \ddot{x} =
 - \frac{d U}{d x} = F
 \]
-that is the famous Newton's second law for single particle. 
+that is the famous Newton's second law for a particle. 
 \end{example}
+The \eqref{eq:lagrange_mechanics} is an example of local approach when
+the knowledge about local properties (this knowledge leads to the
+differential equation) gives us the motion equation.
 
 TBD Newton mechanics vs least action principle
 
