--- a/cattheory.bib
+++ b/cattheory.bib
@@ -1,4 +1,11 @@
 %% -*- coding:utf-8 -*-
+@misc{ wiki:least_action_principle,
+    author = "{Wikipedia contributors}",
+    title = "Principle of least action --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2019",
+    url = "https://en.wikipedia.org/w/index.php?title=Principle_of_least_action&oldid=894342906",
+    note = "[Online; accessed 30-May-2019]"
+  }
 @misc{ quora:monoidimportance,
     author = "{Lex Sheehan}",
     title = "What’s the significance of monoids?",
