--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -209,6 +209,7 @@ In our toy example \cref{fig:pl_example} the type String is
 \section{Product and sum}
 
 \subsection{Product}
+\index{Universal property}
 The pair of 2 objects is defined via the universal property in
 the following way:
 \begin{definition}[Product]
@@ -370,6 +371,7 @@ Let we have a category $\cat{C}$ and $c_1, c_2 \in \catob{C}$ -two
 another object in $\cat{C}$ $c = c_1 \oplus c_2$ with 2
 \mynameref{def:morphism}s $i_1, i_2$ such that $c = i_1(c_1), c = i_2
 (c_2)$ and the 
+\index{Universal property}
 following universal property is satisfied: $\forall c' \in \catob{C}$
 and morphisms $i'_1: c_1 \to c', i'_2: c_2 \to c'$, exists unique
 morphism $h$ such that the following diagram (see \cref{fig:sum})
@@ -540,7 +542,8 @@ category and $a, b \in \catob{C}$
 then the \mynameref{def:homset} $a \to b \in \catob{Set}$ but we now want to
 construct something like to the \mynameref{def:homset} but that is an object in
 $\cat{C}$. This will be called as the function object. We will use the
-universal construction for the object definition.
+universal construction (property) \index{Universal property} for the
+object definition. 
 
 \begin{definition}[Exponential]
 \label{def:exponential}
