Lagranginal mechanics as local (non categorical) approach in the physics

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1552,6 +1552,8 @@ We can rewrite the principle as follows
 \int_{t_1}^{t_2} \frac{\partial L}{\partial {\bf q}} \delta {\bf
     q} dt 
 +
+\nonumber \\
++
 \left. \frac{\partial L}{\partial \dot{\bf q}} \delta {\bf q} \right|_{t_1}^{t_2} - 
 \int_{t_1}^{t_2} \frac{d}{d t} \left( \frac{\partial L}{\partial
   \dot{\bf q}} \delta {\bf q}\right) dt = 
