categorical approach in physics

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1458,6 +1458,12 @@ TBD imperative vs declarative
 
 \subsection{Physics}
 
+Many physical concepts (may be every one) can be formulated in 2 ways.
+The first one uses differential equations (aka local approach). The
+second one uses integral equations (aka global approach). The first
+case is similar to the ``microscope'' usage. The second one is the
+similar to ``telescope'' approach.
+
 \subsubsection{Classical mechanics}
 We will consider a motion of a classical mechanical system there. The
 system consists of $n$ particles. Each particle with number $i \in {1,
