Some comments about objects equality

--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -5,7 +5,7 @@
 
 The important question is how can we decide whenever an
 object/morphism is equal to another object/morphism? The trivial
-answer is possible if an \mynameref{def:object} is a
+answer is possible if the \mynameref{def:object} is a
 \mynameref{def:set}. In the case we can say that 2 objects are equal
 if they contain the equivalent collection of elements. Unfortunately
 we cannot do the same trick for categorical \mynameref{def:object}s as
