Some comments about objects equality

--- a/objectsmorphisms.tex
+++ b/objectsmorphisms.tex
@@ -19,7 +19,7 @@ a category $\cat{C}$ in the terms of whole $\cathom{C}$.
 Two \mynameref{def:object}s $a$ and $b$ in \mynameref{def:category}
 $\cat{C}$ are equal if there exists an unique
 \mynameref{def:isomorphism} $a \cong_f b$. This also means that
-also exist unique isomorphism $b \cong_g a$. These two
+there exists an unique isomorphism $b \cong_g a$. These two
 \mynameref{def:morphism}s ($f$ and $g$) are related each other via 
 the following equations: $f \circ g = \idm{a}$ and $g \circ f
 = \idm{b}$. 
