Imperative vs declarative approach in programming languages

--- a/basedefinitions.tex
+++ b/basedefinitions.tex
@@ -1454,6 +1454,25 @@ description via its internal structure.
 
 \subsection{Programming languages}
 
+There are two basic options possible in programming language. You can
+use an imperative approach to implement requested functionality or
+declarative (functional) one. Lets illustrate it on the factorial
+calculation example.
+
+The factorial can be defined in 2 forms. The first one assumes direct
+instruction on how to calculate it:
+\begin{equation}
+n! = \prod_{i = 1}^n i,
+\nonumber
+\end{equation}
+another one gives you a formal definition for the function:
+\begin{eqnarray}
+n! = n \cdot \left(n-1\right)!, 
+\nonumber \\
+0! = 1
+\nonumber
+\end{eqnarray}
+
 TBD imperative vs declarative
 
 \subsection{Physics}
